<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/noDataHint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="4dp"
    android:paddingTop="20dp"
    android:paddingEnd="4dp"
    android:paddingBottom="20dp">

    <TextView
        style="@style/CustomStyle.Text.Primary"
        android:layout_gravity="center"
        android:layout_margin="@dimen/hint_text_margin"
        android:text="@string/hint_icon_sad"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/hint_text_margin"
        android:orientation="vertical">

        <TextView
            style="@style/CustomStyle.Text.Primary"
            android:layout_marginBottom="3dp"
            android:text="@string/hint_title_no_favourite_locations" />

        <TextView
            style="@style/CustomStyle.Text.Secondary"
            android:text="@string/hint_description_no_favourite_locations" />
    </LinearLayout>
</LinearLayout>
