<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/mainContentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/bottom_app_bar_height"
                android:orientation="vertical"
                android:visibility="invisible"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/locationName"
                        style="@style/CustomStyle.Text.Section"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:text="Moscow, RU" />

                    <ToggleButton
                        android:id="@+id/favouriteToggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:foreground="@drawable/selector_favourite"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:textOff=""
                        android:textOn="" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/currentDescriptionImage"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    tools:src="@drawable/weather_clear_day" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/currentTemperature"
                        style="@style/CustomStyle.Text.Header"
                        android:textSize="45sp"
                        tools:text="+15" />

                    <TextView
                        style="@style/CustomStyle.Text.Header"
                        android:text="@string/sign_degree"
                        android:textSize="45sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/currentFeelsLikeValue"
                        style="@style/CustomStyle.Text.Primary"
                        android:textColor="?android:attr/textColorSecondary"
                        android:text="@string/feels_like" />

                    <TextView
                        android:id="@+id/currentFeelsLike"
                        style="@style/CustomStyle.Text.Primary"
                        android:textColor="?android:attr/textColorSecondary"
                        android:layout_marginStart="@dimen/text_space_margin"
                        tools:text="+13" />

                    <TextView
                        style="@style/CustomStyle.Text.Primary"
                        android:layout_width="wrap_content"
                        android:textColor="?android:attr/textColorSecondary"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_degree" />

                </LinearLayout>

                <TextView
                    android:id="@+id/currentDescription"
                    style="@style/CustomStyle.Text.Primary"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    tools:text="Sunny" />

                <LinearLayout
                    android:id="@+id/precipitationsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/details_layout_padding"
                    android:paddingEnd="@dimen/details_layout_padding"
                    android:paddingBottom="4dp">

                    <design.morristech.openweather.views.PrecipitationCard
                        android:id="@+id/humidityCard"
                        style="@style/CustomStyle.CardView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/humidityTileColor"
                        app:prepIcon="@drawable/ic_humidity"
                        app:prepTextColor="?attr/humidityTextColor"
                        app:prepTitle="@string/humidity"
                        app:prepUnit="%"
                        app:prepValue="70" />

                    <design.morristech.openweather.views.PrecipitationCard
                        android:id="@+id/windCard"
                        style="@style/CustomStyle.CardView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/windTileColor"
                        app:prepIcon="@drawable/ic_wind"
                        app:prepTextColor="?attr/windTextColor"
                        app:prepTitle="@string/wind"
                        app:prepUnit="@string/wind_value_meters_per_second"
                        app:prepValue="4" />

                    <design.morristech.openweather.views.PrecipitationCard
                        android:id="@+id/pressureCard"
                        style="@style/CustomStyle.CardView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/pressureTileColor"
                        app:prepIcon="@drawable/ic_pressure"
                        app:prepTextColor="?attr/pressureTextColor"
                        app:prepTitle="@string/pressure"
                        app:prepUnit="@string/pressure_value_millimeters"
                        app:prepValue="766" />

                </LinearLayout>

                <TextView
                    android:id="@+id/hourTitle"
                    style="@style/CustomStyle.Text.Section"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/section_next_hours" />

                <!-- TODO: Rename id-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hourList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingStart="10dp"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingEnd="6dp"
                    android:paddingBottom="4dp"
                    tools:itemCount="9"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_hour"
                    tools:orientation="horizontal" />

                <TextView
                    style="@style/CustomStyle.Text.Section"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/section_next_days" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dayList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    tools:itemCount="7"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_day"
                    tools:orientation="vertical" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_app_bar_height"
            android:layout_gravity="bottom"
            app:elevation="@dimen/bottom_app_bar_elevation"
            app:layout_behavior="com.google.android.material.bottomappbar.BottomAppBar$Behavior"
            app:menu="@menu/main_menu"
            app:navigationContentDescription="@string/menu_navigation_description"
            app:navigationIcon="@drawable/ic_menu_black_24dp"
            tools:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
